--- a/k_means/kmeans.ipynb
+++ b/k_means/kmeans.ipynb
@@ -217,7 +217,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### This doesn't work as the number of clusters cannot be more than the no. of datapoints!!"
+   ]
   }
  ],
  "metadata": {
