Basic k means working with random data points

--- a/k_means/kmeans_basic.ipynb
+++ b/k_means/kmeans_basic.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Creating an array of points in 2-D space\n",
+    "## Creating an array of random points in 2-D space\n",
     "\n",
     "X = np.array([[1,2],\n",
     "             [1.5,2],\n",
